Revision history for {{$dist->name}}

{{$NEXT}}

1.17_01   2020-04-18 09:04:02 -0600
  - Silence (probably harmless) clang warning introduced in 1.12_01
    (gh#237, gh#239)

1.16_01   2020-04-18 10:10:37 -0400
  - Initial support for custom records.  Returning custom records
    (either via pointer or by reference) is excluded, but should
    be added soon (gh#214, gh#215, gh#235)

1.15_01   2020-04-17 10:34:13 -0600
  - Internal refactor (gh#214)

1.14_01   2020-04-17 09:14:25 -0600
  - Experimental: with api => 2, a return value of NULL is
    translated to undef instead of empty list (gh#234, gh#231)

1.12_01   2020-04-17 10:35:51 -0400
  - Added grow and set_used_length functions to
    FFI::Platypus::Buffer (djerius++ gh#225)

1.11      2020-04-16 04:07:34 -0600
  - Add api method (gh#233)
  - On Visual C++ Perl detect libffi using Win32::Vcpkg, if
    available (gh#229)
  - Simplified internal handling of 64 bit integers for
    32 and 64 bit arch (gh#228)

1.10      2020-02-05 16:39:51 -0700
  - On OS X, check if homebrew + libffi is installed and use
    that instead of falling back on Alien::FFI (libffi isn't
    installed by homebrew in a way that it can be found by
    without specifically looking for it).
  - Die with an appropriate diagnostic if there is a syntax or
    runtime error in an .fbx file (FFI::Build).
    (djerius++ gh#223)

1.09      2020-01-18 13:41:56 -0700
  - Production release identical to 1.08_01

1.08_01   2020-01-17 19:39:21 -0700
  - Fix warning on some versions of windows (gh#217, gh#218)

1.07      2019-12-28 08:44:36 -0700
  - Fix bug in variadic argument count (gh#210, gh#211)

1.06      2019-12-14 07:49:54 -0700
  - Visual C++ Perl build probe for ssize_t (gh#208, gh#209)

1.05      2019-12-13 09:27:50 -0700
  - ffi_platypus_bundle.h provides an EXPORT macro which allows
    you to decorate functions/data for export under Visual C++ Perl (gh#207)
  - ffi_pl_bundle_init, ffi_pl_bundle_constant and ffi_pl_bundle_fini