@@ -34,8 +34,7 @@ new(class, platypus, address, abi, var_fixed_args, return_type, ...)
       croak("returning record values is not supported by some combination of your libffi/compiler/platypus");
     }
 #endif
-    if(return_type->type_code == (FFI_PL_TYPE_RECORD|FFI_PL_SHAPE_CUSTOM_PERL)
-    || return_type->type_code == (FFI_PL_TYPE_RECORD_VALUE|FFI_PL_SHAPE_CUSTOM_PERL))
+    if(return_type->type_code == (FFI_PL_TYPE_RECORD_VALUE|FFI_PL_SHAPE_CUSTOM_PERL))
     {
       croak("returning custom records is not YET supported");
     }
